fixed: overflow news latter section

--- a/css/notice-bar.css
+++ b/css/notice-bar.css
@@ -13,7 +13,7 @@
 .notice-bar {
   text-align: right;
   padding: 0.5rem;
-  font-size: 0.8rem;
+  font-size: 0.7rem;
   border-bottom: 1px solid hsl(0, 0%, 0%);
   text-transform: capitalize;
   width: 100%;
